// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|DataSourceNavigation Default 1`] = `
.c0 {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 20px;
  background-color: #1d1d20;
}

.c0 svg {
  cursor: pointer;
}

.c2 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.2;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  padding-top: 9px;
  color: #71737e;
  font-size: 12px;
  display: none;
}

@media (min-width:1040px) {
  .c0 {
    position: static;
    background-color: transparent;
    padding: 0;
    display: -webkit-box;
    display: -webkit-fixed;
    display: -ms-fixedbox;
    display: fixed;
  }
}

@media (min-width:1040px) {
  .c2 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c1 {
    margin-left: 15px;
  }
}

@media (min-width:1040px) {
  .c3 {
    display: block;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Source
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M15 45V15h30v30H15zm9-9.334h-7V43h7v-7.334zm19 0H26V43h17v-7.334zm0-9.333H25.999L26 33.666h17v-7.333zm-19.001 0h-7L17 33.666h7l-.001-7.333zM43 17H25.999v7.333H43V17zm-19.001 0h-7v7.333h7V17z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Fields
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          fill="#fff"
          stroke="#000"
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "stroke": "#1d1d20",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <g
            fillRule="evenodd"
          >
            <path
              d="M15 45V15h30v30H15zm14-9.334H17V43h12v-7.334zm14 0H31V43h12v-7.334zm0-9.333H30.999L31 33.666h12v-7.333zm-14.001 0h-12L17 33.666h12l-.001-7.333zM43 17H30.999v7.333H43V17zm-14.001 0h-12v7.333h12V17z"
              stroke="none"
            />
            <circle
              cx={43}
              cy={40}
              fill="none"
              r={5}
              strokeWidth={10}
            />
            <path
              d="M43.42 41.872c-1.173-.03-1.864-.746-1.84-1.92.024-1.183.774-1.763 1.933-1.87 1.147.163 1.87.778 1.836 1.959-.033 1.17-.756 1.86-1.93 1.83m7.081-.6v-2.548c-2.414-.738-2.412-.737-1.336-2.595.044-.076.006-.2.006-.138l-1.53-1.873c-2.153 1.275-2.153 1.275-2.965-1.06-.39-.02-.807-.06-1.223-.057-.412.002-.824.046-1.206.07-.65 2.143-.65 2.143-2.94 1.185-.29.27-.611.545-.9.849-.281.294-.53.618-.769.903 1.223 1.97 1.223 1.97-1.137 2.74v2.434l2.28.644-1.169 2.149 1.705 1.822c2.379-1.249 2.379-1.249 2.87 1.204h2.559c.576-2.424.576-2.424 2.865-1.215l1.684-1.736c-1.227-2.314-1.227-2.314 1.206-2.779"
              stroke="none"
            />
          </g>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Steps
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          fill="#fff"
          stroke="#000"
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "stroke": "#1d1d20",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <g
            fillRule="evenodd"
          >
            <path
              d="M15 45V15h30v30H15zm14-9.334H17V43h12v-7.334zm14 0H31V43h12v-7.334zm0-9.333H30.999L31 33.666h12v-7.333zm-14.001 0h-12L17 33.666h12l-.001-7.333zM43 17H30.999v7.333H43V17zm-14.001 0h-12v7.333h12V17z"
              stroke="none"
            />
            <circle
              cx={43}
              cy={40}
              fill="none"
              r={5}
              strokeWidth={10}
            />
            <path
              d="M43.42 41.872c-1.173-.03-1.864-.746-1.84-1.92.024-1.183.774-1.763 1.933-1.87 1.147.163 1.87.778 1.836 1.959-.033 1.17-.756 1.86-1.93 1.83m7.081-.6v-2.548c-2.414-.738-2.412-.737-1.336-2.595.044-.076.006-.2.006-.138l-1.53-1.873c-2.153 1.275-2.153 1.275-2.965-1.06-.39-.02-.807-.06-1.223-.057-.412.002-.824.046-1.206.07-.65 2.143-.65 2.143-2.94 1.185-.29.27-.611.545-.9.849-.281.294-.53.618-.769.903 1.223 1.97 1.223 1.97-1.137 2.74v2.434l2.28.644-1.169 2.149 1.705 1.822c2.379-1.249 2.379-1.249 2.87 1.204h2.559c.576-2.424.576-2.424 2.865-1.215l1.684-1.736c-1.227-2.314-1.227-2.314 1.206-2.779"
              stroke="none"
            />
          </g>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Results
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          stroke="#FFF"
          style={
            Object {
              "height": 54,
              "stroke": "#FFF",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M42.586 16H17.414L26 24.586V44h8V24.586L42.586 16z"
            fill="none"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Filters
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "height": 54,
              "stroke": "#FFF",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M13 31h8v13h-8zm13-8h8v21h-8zm13-7h9v28h-9z"
            fill="none"
            fillRule="evenodd"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Tags
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|DataSourceNavigation With Job 1`] = `
.c0 {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 20px;
  background-color: #1d1d20;
}

.c0 svg {
  cursor: pointer;
}

.c4 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 svg {
  opacity: 0.4;
}

.c2 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  padding-top: 9px;
  color: #71737e;
  font-size: 12px;
  display: none;
}

@media (min-width:1040px) {
  .c0 {
    position: static;
    background-color: transparent;
    padding: 0;
    display: -webkit-box;
    display: -webkit-fixed;
    display: -ms-fixedbox;
    display: fixed;
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c2 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c1 {
    margin-left: 15px;
  }
}

@media (min-width:1040px) {
  .c3 {
    display: block;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Source
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M15 45V15h30v30H15zm9-9.334h-7V43h7v-7.334zm19 0H26V43h17v-7.334zm0-9.333H25.999L26 33.666h17v-7.333zm-19.001 0h-7L17 33.666h7l-.001-7.333zM43 17H25.999v7.333H43V17zm-19.001 0h-7v7.333h7V17z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Fields
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          fill="#fff"
          stroke="#000"
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "stroke": "#1d1d20",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <g
            fillRule="evenodd"
          >
            <path
              d="M15 45V15h30v30H15zm14-9.334H17V43h12v-7.334zm14 0H31V43h12v-7.334zm0-9.333H30.999L31 33.666h12v-7.333zm-14.001 0h-12L17 33.666h12l-.001-7.333zM43 17H30.999v7.333H43V17zm-14.001 0h-12v7.333h12V17z"
              stroke="none"
            />
            <circle
              cx={43}
              cy={40}
              fill="none"
              r={5}
              strokeWidth={10}
            />
            <path
              d="M43.42 41.872c-1.173-.03-1.864-.746-1.84-1.92.024-1.183.774-1.763 1.933-1.87 1.147.163 1.87.778 1.836 1.959-.033 1.17-.756 1.86-1.93 1.83m7.081-.6v-2.548c-2.414-.738-2.412-.737-1.336-2.595.044-.076.006-.2.006-.138l-1.53-1.873c-2.153 1.275-2.153 1.275-2.965-1.06-.39-.02-.807-.06-1.223-.057-.412.002-.824.046-1.206.07-.65 2.143-.65 2.143-2.94 1.185-.29.27-.611.545-.9.849-.281.294-.53.618-.769.903 1.223 1.97 1.223 1.97-1.137 2.74v2.434l2.28.644-1.169 2.149 1.705 1.822c2.379-1.249 2.379-1.249 2.87 1.204h2.559c.576-2.424.576-2.424 2.865-1.215l1.684-1.736c-1.227-2.314-1.227-2.314 1.206-2.779"
              stroke="none"
            />
          </g>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Steps
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          fill="#fff"
          stroke="#000"
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "stroke": "#1d1d20",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <g
            fillRule="evenodd"
          >
            <path
              d="M15 45V15h30v30H15zm14-9.334H17V43h12v-7.334zm14 0H31V43h12v-7.334zm0-9.333H30.999L31 33.666h12v-7.333zm-14.001 0h-12L17 33.666h12l-.001-7.333zM43 17H30.999v7.333H43V17zm-14.001 0h-12v7.333h12V17z"
              stroke="none"
            />
            <circle
              cx={43}
              cy={40}
              fill="none"
              r={5}
              strokeWidth={10}
            />
            <path
              d="M43.42 41.872c-1.173-.03-1.864-.746-1.84-1.92.024-1.183.774-1.763 1.933-1.87 1.147.163 1.87.778 1.836 1.959-.033 1.17-.756 1.86-1.93 1.83m7.081-.6v-2.548c-2.414-.738-2.412-.737-1.336-2.595.044-.076.006-.2.006-.138l-1.53-1.873c-2.153 1.275-2.153 1.275-2.965-1.06-.39-.02-.807-.06-1.223-.057-.412.002-.824.046-1.206.07-.65 2.143-.65 2.143-2.94 1.185-.29.27-.611.545-.9.849-.281.294-.53.618-.769.903 1.223 1.97 1.223 1.97-1.137 2.74v2.434l2.28.644-1.169 2.149 1.705 1.822c2.379-1.249 2.379-1.249 2.87 1.204h2.559c.576-2.424.576-2.424 2.865-1.215l1.684-1.736c-1.227-2.314-1.227-2.314 1.206-2.779"
              stroke="none"
            />
          </g>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Results
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          stroke="#FFF"
          style={
            Object {
              "height": 54,
              "stroke": "#FFF",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M42.586 16H17.414L26 24.586V44h8V24.586L42.586 16z"
            fill="none"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Filters
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "height": 54,
              "stroke": "#FFF",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M13 31h8v13h-8zm13-8h8v21h-8zm13-7h9v28h-9z"
            fill="none"
            fillRule="evenodd"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Tags
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|DataSourceNavigation With fake Job 1`] = `
.c0 {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 20px;
  background-color: #1d1d20;
}

.c0 svg {
  cursor: pointer;
}

.c4 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 svg {
  opacity: 0.4;
}

.c2 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  background-color: #1d1d20;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.2;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  padding-top: 9px;
  color: #71737e;
  font-size: 12px;
  display: none;
}

@media (min-width:1040px) {
  .c0 {
    position: static;
    background-color: transparent;
    padding: 0;
    display: -webkit-box;
    display: -webkit-fixed;
    display: -ms-fixedbox;
    display: fixed;
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c2 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c5 {
    width: 60px;
    height: 60px;
  }
}

@media (min-width:1040px) {
  .c1 {
    margin-left: 15px;
  }
}

@media (min-width:1040px) {
  .c3 {
    display: block;
  }
}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Source
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M15 45V15h30v30H15zm9-9.334h-7V43h7v-7.334zm19 0H26V43h17v-7.334zm0-9.333H25.999L26 33.666h17v-7.333zm-19.001 0h-7L17 33.666h7l-.001-7.333zM43 17H25.999v7.333H43V17zm-19.001 0h-7v7.333h7V17z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Fields
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          fill="#fff"
          stroke="#000"
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "stroke": "#1d1d20",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <g
            fillRule="evenodd"
          >
            <path
              d="M15 45V15h30v30H15zm14-9.334H17V43h12v-7.334zm14 0H31V43h12v-7.334zm0-9.333H30.999L31 33.666h12v-7.333zm-14.001 0h-12L17 33.666h12l-.001-7.333zM43 17H30.999v7.333H43V17zm-14.001 0h-12v7.333h12V17z"
              stroke="none"
            />
            <circle
              cx={43}
              cy={40}
              fill="none"
              r={5}
              strokeWidth={10}
            />
            <path
              d="M43.42 41.872c-1.173-.03-1.864-.746-1.84-1.92.024-1.183.774-1.763 1.933-1.87 1.147.163 1.87.778 1.836 1.959-.033 1.17-.756 1.86-1.93 1.83m7.081-.6v-2.548c-2.414-.738-2.412-.737-1.336-2.595.044-.076.006-.2.006-.138l-1.53-1.873c-2.153 1.275-2.153 1.275-2.965-1.06-.39-.02-.807-.06-1.223-.057-.412.002-.824.046-1.206.07-.65 2.143-.65 2.143-2.94 1.185-.29.27-.611.545-.9.849-.281.294-.53.618-.769.903 1.223 1.97 1.223 1.97-1.137 2.74v2.434l2.28.644-1.169 2.149 1.705 1.822c2.379-1.249 2.379-1.249 2.87 1.204h2.559c.576-2.424.576-2.424 2.865-1.215l1.684-1.736c-1.227-2.314-1.227-2.314 1.206-2.779"
              stroke="none"
            />
          </g>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Steps
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c5"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          fill="#fff"
          stroke="#000"
          style={
            Object {
              "fill": "#FFF",
              "height": 54,
              "stroke": "#1d1d20",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <g
            fillRule="evenodd"
          >
            <path
              d="M15 45V15h30v30H15zm14-9.334H17V43h12v-7.334zm14 0H31V43h12v-7.334zm0-9.333H30.999L31 33.666h12v-7.333zm-14.001 0h-12L17 33.666h12l-.001-7.333zM43 17H30.999v7.333H43V17zm-14.001 0h-12v7.333h12V17z"
              stroke="none"
            />
            <circle
              cx={43}
              cy={40}
              fill="none"
              r={5}
              strokeWidth={10}
            />
            <path
              d="M43.42 41.872c-1.173-.03-1.864-.746-1.84-1.92.024-1.183.774-1.763 1.933-1.87 1.147.163 1.87.778 1.836 1.959-.033 1.17-.756 1.86-1.93 1.83m7.081-.6v-2.548c-2.414-.738-2.412-.737-1.336-2.595.044-.076.006-.2.006-.138l-1.53-1.873c-2.153 1.275-2.153 1.275-2.965-1.06-.39-.02-.807-.06-1.223-.057-.412.002-.824.046-1.206.07-.65 2.143-.65 2.143-2.94 1.185-.29.27-.611.545-.9.849-.281.294-.53.618-.769.903 1.223 1.97 1.223 1.97-1.137 2.74v2.434l2.28.644-1.169 2.149 1.705 1.822c2.379-1.249 2.379-1.249 2.87 1.204h2.559c.576-2.424.576-2.424 2.865-1.215l1.684-1.736c-1.227-2.314-1.227-2.314 1.206-2.779"
              stroke="none"
            />
          </g>
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Results
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          stroke="#FFF"
          style={
            Object {
              "height": 54,
              "stroke": "#FFF",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M42.586 16H17.414L26 24.586V44h8V24.586L42.586 16z"
            fill="none"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Filters
        </span>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c4"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          style={
            Object {
              "height": 54,
              "stroke": "#FFF",
              "width": 54,
            }
          }
          viewBox="0 0 60 60"
        >
          <path
            d="M13 31h8v13h-8zm13-8h8v21h-8zm13-7h9v28h-9z"
            fill="none"
            fillRule="evenodd"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="c3"
      >
        <span>
          Tags
        </span>
      </div>
    </div>
  </div>
</div>
`;
